--- a/components/rtticontrols/examples/example2.lfm
+++ b/components/rtticontrols/examples/example2.lfm
@@ -4,6 +4,7 @@ object Form1: TForm1
   ClientWidth = 400
   OnCreate = Form1Create
   OnDestroy = Form1Destroy
+  PixelsPerInch = 90
   HorzScrollBar.Page = 401
   VertScrollBar.Page = 301
   Left = 273
@@ -22,7 +23,6 @@ object Form1: TForm1
     Width = 335
     object TIEdit1: TTIEdit
       TabStop = True
-      TabOrder = 0
       TabOrder = 0
       Left = 23
       Height = 23
@@ -50,11 +50,9 @@ object Form1: TForm1
     Top = 144
     Width = 339
     object TITrackBar1: TTITrackBar
-      DragCursor = 65524
       ScalePos = trTop
       TabOrder = 0
       TabStop = True
-      UseRTTIMinMax = True
       ScalePos = trTop
       Left = 15
       Height = 20
