--- a/examples/codepageconverter/mainunit.lfm
+++ b/examples/codepageconverter/mainunit.lfm
@@ -1,25 +1,27 @@
 object LazConverterForm: TLazConverterForm
-  BorderStyle = bsDialog
-  Caption = 'Codepage LazConverter for PAS, LFM, LRS & INC files v0.0.3'
-  ClientHeight = 176
-  ClientWidth = 587
+  Caption = 'Codepage LazConverter for PAS, LFM, LRS & INC files v0.0.4'
+  ClientHeight = 463
+  ClientWidth = 578
+  Constraints.MinHeight = 463
+  Constraints.MinWidth = 578
+  OnResize = LazConverterFormResize
   OnShow = Form1Show
   PixelsPerInch = 94
   Position = poScreenCenter
-  HorzScrollBar.Page = 588
-  VertScrollBar.Page = 177
-  Left = 298
-  Height = 176
-  Top = 212
-  Width = 587
+  HorzScrollBar.Page = 579
+  VertScrollBar.Page = 464
+  Left = 303
+  Height = 463
+  Top = 125
+  Width = 578
   object Panel1: TPanel
-    Align = alClient
-    ClientHeight = 176
-    ClientWidth = 587
+    Align = alTop
+    ClientHeight = 192
+    ClientWidth = 578
     FullRepaint = False
     TabOrder = 0
-    Height = 176
-    Width = 587
+    Height = 192
+    Width = 578
     object Label1: TLabel
       AutoSize = True
       Caption = 'Path to your project:'
@@ -29,17 +31,19 @@ object LazConverterForm: TLazConverterForm
       Width = 124
     end
     object Edit1: TEdit
+      Anchors = [akTop, akLeft, akRight]
       TabOrder = 1
       Left = 8
       Height = 23
       Top = 24
-      Width = 488
+      Width = 479
     end
     object Button1: TButton
+      Anchors = [akTop, akRight]
       Caption = 'Path'
       OnClick = Button1Click
       TabOrder = 2
-      Left = 504
+      Left = 495
       Height = 23
       Top = 24
       Width = 75
@@ -105,22 +109,15 @@ object LazConverterForm: TLazConverterForm
       Top = 112
       Width = 75
     end
-    object Label4: TLabel
-      AutoSize = True
-      Caption = 'Converting process:'
-      Left = 168
-      Height = 15
-      Top = 104
-      Width = 123
-    end
     object ProgressBar1: TProgressBar
+      Align = alBottom
       Max = 100
-      TabOrder = 11
+      TabOrder = 10
       TabStop = True
-      Left = 168
+      Left = 1
       Height = 17
-      Top = 120
-      Width = 411
+      Top = 174
+      Width = 576
     end
     object Label5: TLabel
       Caption = 'Directory:'
@@ -130,11 +127,59 @@ object LazConverterForm: TLazConverterForm
       Width = 65
     end
     object Label6: TLabel
+      Anchors = [akTop, akLeft, akRight]
       Caption = 'Ready...'
       Left = 80
       Height = 17
       Top = 149
-      Width = 496
+      Width = 487
+    end
+  end
+  object ListView1: TListView
+    Align = alClient
+    Columns = <    
+      item
+        Caption = 'FileName'
+        Width = 450
+      end    
+      item
+        AutoSize = True
+        Caption = 'Type'
+        Width = 0
+      end>
+    PopupMenu = PopupMenu1
+    ViewStyle = vsReport
+    OnSelectItem = ListView1SelectItem
+    Height = 232
+    Top = 192
+    Width = 578
+  end
+  object Panel2: TPanel
+    Align = alBottom
+    ClientHeight = 39
+    ClientWidth = 578
+    FullRepaint = False
+    TabOrder = 2
+    Height = 39
+    Top = 424
+    Width = 578
+    object Button4: TButton
+      Caption = 'Remove from conversion'
+      OnClick = Button4Click
+      TabOrder = 0
+      Left = 8
+      Height = 25
+      Top = 8
+      Width = 155
+    end
+    object Button5: TButton
+      Caption = 'View'
+      OnClick = Button5Click
+      TabOrder = 1
+      Left = 168
+      Height = 25
+      Top = 8
+      Width = 75
     end
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
@@ -149,5 +194,20 @@ object LazConverterForm: TLazConverterForm
     OnFinish = FileSearch1Finish
     left = 8
     top = 448
+  end
+  object PopupMenu1: TPopupMenu
+    left = 224
+    top = 8
+    object MenuItem1: TMenuItem
+      Caption = 'View File'
+      OnClick = Button5Click
+    end
+    object MenuItem2: TMenuItem
+      Caption = '-'
+    end
+    object MenuItem3: TMenuItem
+      Caption = 'Remove From Conversion'
+      OnClick = Button4Click
+    end
   end
 end
