--- a/ide/codeexplorer.lfm
+++ b/ide/codeexplorer.lfm
@@ -1,4 +1,5 @@
 object CodeExplorerView: TCodeExplorerView
+  ActiveControl = RefreshButton
   Caption = 'CodeExplorerView'
   ClientHeight = 505
   ClientWidth = 206
@@ -6,6 +7,7 @@ object CodeExplorerView: TCodeExplorerView
   OnClose = CodeExplorerViewCLOSE
   OnCreate = CodeExplorerViewCREATE
   OnResize = CodeExplorerViewRESIZE
+  PixelsPerInch = 90
   HorzScrollBar.Page = 207
   VertScrollBar.Page = 506
   Left = 378
@@ -14,14 +16,14 @@ object CodeExplorerView: TCodeExplorerView
   Width = 206
   object RefreshButton: TButton
     Caption = 'Refresh'
-    TabOrder = 0
     OnClick = RefreshButtonCLICK
+    TabOrder = 0
     Height = 25
     Width = 96
   end
   object OptionsButton: TButton
-    Enabled = False
     Caption = 'Options'
+    OnClick = OptionsButtonClick
     TabOrder = 1
     Left = 110
     Height = 25
@@ -30,7 +32,6 @@ object CodeExplorerView: TCodeExplorerView
   object CodeTreeview: TTreeView
     Align = alBottom
     DefaultItemHeight = 17
-    DragCursor = 65524
     HideSelection = False
     Images = Imagelist1
     ParentCtl3D = False
