fixed registering TProgressBar, disabled docking in TToolBar, return key for codeexplorer, updated finnish translation
 SVN 6463@trunk

--- a/ide/codeexplorer.lfm
+++ b/ide/codeexplorer.lfm
@@ -40,6 +40,7 @@ object CodeExplorerView: TCodeExplorerView
     TabOrder = 2
     OnDblClick = CodeTreeviewDBLCLICK
     OnDeletion = CodeTreeviewDELETION
+    OnKeyUp = CodeTreeviewKeyUp
     Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     Height = 480
     Top = 25
