--- a/components/rtticontrols/examples/examplegrid1.lfm
+++ b/components/rtticontrols/examples/examplegrid1.lfm
@@ -4,7 +4,8 @@ object Form1: TForm1
   ClientWidth = 400
   OnCreate = Form1Create
   OnDestroy = Form1Destroy
-  PixelsPerInch = 90
+  OnMouseDown = Form1MouseDown
+  PixelsPerInch = 75
   HorzScrollBar.Page = 401
   VertScrollBar.Page = 301
   Left = 290
@@ -15,11 +16,12 @@ object Form1: TForm1
     BorderStyle = bsSingle
     Color = clWhite
     DefaultRowHeight = 24
+    Filter = [tkInteger, tkChar, tkEnumeration, tkFloat, tkSString, tkLString, tkAString, tkWString, tkVariant, tkWChar, tkBool, tkInt64, tkQWord]
     FixedColor = clBtnFace
-    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goSmoothScroll]
-    Left = 40
+    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing, goAlwaysShowEditor, goSmoothScroll]
+    Left = 32
     Height = 166
-    Top = 64
+    Top = 16
     Width = 316
     ColWidths = (
       64
@@ -35,5 +37,17 @@ object Form1: TForm1
       24
       24
     )
+  end
+  object TICheckBox1: TTICheckBox
+    AutoSize = True
+    Caption = 'goColSizing'
+    Link.TIObject = TIGrid1
+    Link.TIPropertyName = 'Options'
+    Link.TIElementName = 'goColSizing'
+    TabStop = True
+    Left = 34
+    Height = 23
+    Top = 216
+    Width = 90
   end
 end
