--- a/ide/extractprocdlg.lfm
+++ b/ide/extractprocdlg.lfm
@@ -24,16 +24,17 @@ object ExtractProcDialog: TExtractProcDialog
   object OkButton: TButton
     Caption = 'OkButton'
     OnClick = OkButtonCLICK
-    TabOrder = 1
+    TabOrder = 0
     Left = 88
     Height = 25
     Top = 192
     Width = 120
   end
   object CancelButton: TButton
+    Cancel = True
     Caption = 'CancelButton'
     ModalResult = 2
-    TabOrder = 2
+    TabOrder = 1
     Left = 248
     Height = 25
     Top = 192
@@ -46,14 +47,13 @@ object ExtractProcDialog: TExtractProcDialog
     ClientWidth = 426
     ParentColor = True
     ParentCtl3D = False
-    TabOrder = 3
+    TabOrder = 2
     Left = 8
     Height = 44
     Top = 135
     Width = 430
     object NameEdit: TEdit
       Align = alTop
-      Anchors = [akTop, akLeft, akRight]
       TabOrder = 0
       Text = 'NameEdit'
       Height = 23
