--- a/designer/anchoreditor.lfm
+++ b/designer/anchoreditor.lfm
@@ -7,14 +7,15 @@ object AnchorDesigner: TAnchorDesigner
   OnDestroy = AnchorDesignerDestroy
   OnShow = AnchorDesignerShow
   PixelsPerInch = 90
-  HorzScrollBar.Page = 521
-  VertScrollBar.Page = 260
+  HorzScrollBar.Page = 519
+  VertScrollBar.Page = 258
   Left = 290
   Height = 259
   Top = 163
   Width = 520
   object BorderSpaceGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.OnChange = nil
     Caption = 'BorderSpaceGroupBox'
     ClientHeight = 87
     ClientWidth = 168
@@ -25,68 +26,63 @@ object AnchorDesigner: TAnchorDesigner
     Top = 80
     Width = 172
     object LeftBorderSpaceSpinEdit: TSpinEdit
+      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
       ParentShowHint = False
       ShowHint = True
       TabStop = True
       TabOrder = 0
-      Decimal_Places = 0
-      MaxValue = 100
       Height = 20
       Top = 30
       Width = 50
     end
     object RightBorderSpaceSpinEdit: TSpinEdit
+      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
       ParentShowHint = False
       ShowHint = True
       TabStop = True
       TabOrder = 1
-      Decimal_Places = 0
-      MaxValue = 100
       Left = 118
       Height = 20
       Top = 30
       Width = 50
     end
     object TopBorderSpaceSpinEdit: TSpinEdit
+      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
       ParentShowHint = False
       ShowHint = True
       TabStop = True
       TabOrder = 2
-      Decimal_Places = 0
-      MaxValue = 100
       Left = 58
       Height = 20
       Width = 50
     end
     object BottomBorderSpaceSpinEdit: TSpinEdit
+      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
       ParentShowHint = False
       ShowHint = True
       TabStop = True
       TabOrder = 3
-      Decimal_Places = 0
-      MaxValue = 100
       Left = 58
       Height = 20
       Top = 57
       Width = 50
     end
     object AroundBorderSpaceSpinEdit: TSpinEdit
+      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
       ParentShowHint = False
       ShowHint = True
       TabStop = True
       TabOrder = 4
-      Decimal_Places = 0
-      MaxValue = 100
       Left = 58
       Height = 20
       Top = 30
@@ -95,6 +91,7 @@ object AnchorDesigner: TAnchorDesigner
   end
   object TopGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akRight]
+    BorderSpacing.OnChange = nil
     Caption = 'TopGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -105,6 +102,7 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object TopRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       ShowHint = True
@@ -115,6 +113,7 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       ShowHint = True
@@ -125,6 +124,7 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
       ShowHint = True
@@ -133,15 +133,29 @@ object AnchorDesigner: TAnchorDesigner
       Height = 30
       Width = 30
     end
+    object TopSiblingLabel: TLabel
+      AutoSize = True
+      BorderSpacing.OnChange = nil
+      Caption = 'Sibling'
+      ParentColor = True
+      Left = 94
+      Height = 12
+      Top = 4
+      Width = 38
+    end
     object TopAnchoredCheckBox: TCheckBox
+      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
+      OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
+      UseOnChange = True
       Left = 2
       Height = 24
       Width = 70
     end
     object TopSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.OnChange = nil
       MaxLength = 0
       ParentShowHint = False
       ShowHint = True
@@ -151,17 +165,10 @@ object AnchorDesigner: TAnchorDesigner
       Height = 25
       Width = 129
     end
-    object TopSiblingLabel: TLabel
-      AutoSize = True
-      Caption = 'Sibling'
-      Left = 94
-      Height = 16
-      Top = 4
-      Width = 38
-    end
   end
   object BottomGroupBox: TGroupBox
     Anchors = [akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
     Caption = 'BottomGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -173,6 +180,7 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object BottomRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       ShowHint = True
@@ -183,6 +191,7 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       ShowHint = True
@@ -193,6 +202,7 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
       ShowHint = True
@@ -201,15 +211,29 @@ object AnchorDesigner: TAnchorDesigner
       Height = 30
       Width = 30
     end
+    object BottomSiblingLabel: TLabel
+      AutoSize = True
+      BorderSpacing.OnChange = nil
+      Caption = 'Sibling'
+      ParentColor = True
+      Left = 94
+      Height = 12
+      Top = 8
+      Width = 38
+    end
     object BottomAnchoredCheckBox: TCheckBox
+      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
+      OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
+      UseOnChange = True
       Left = 2
       Height = 24
       Width = 70
     end
     object BottomSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.OnChange = nil
       MaxLength = 0
       ParentShowHint = False
       ShowHint = True
@@ -219,17 +243,10 @@ object AnchorDesigner: TAnchorDesigner
       Height = 25
       Width = 129
     end
-    object BottomSiblingLabel: TLabel
-      AutoSize = True
-      Caption = 'Sibling'
-      Left = 94
-      Height = 16
-      Top = 8
-      Width = 38
-    end
   end
   object RightGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.OnChange = nil
     Caption = 'RightGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -240,6 +257,7 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object RightRefLeftSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       ShowHint = True
@@ -250,6 +268,7 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefRightSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       ShowHint = True
@@ -260,6 +279,7 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefCenterSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
       ShowHint = True
@@ -269,27 +289,32 @@ object AnchorDesigner: TAnchorDesigner
       Top = 81
       Width = 30
     end
+    object RightSiblingLabel: TLabel
+      AutoSize = True
+      BorderSpacing.OnChange = nil
+      Caption = 'Sibling'
+      ParentColor = True
+      Left = 2
+      Height = 12
+      Top = 28
+      Width = 38
+    end
     object RightAnchoredCheckBox: TCheckBox
+      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
+      OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
+      UseOnChange = True
       Left = 2
       Height = 24
       Width = 70
     end
-    object RightSiblingLabel: TLabel
-      AutoSize = True
-      Caption = 'Sibling'
-      Left = 2
-      Height = 16
-      Top = 28
-      Width = 38
-    end
     object RightSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.OnChange = nil
       MaxLength = 0
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 2
       Text = 'RightSiblingComboBox'
       Left = 5
       Height = 25
@@ -299,6 +324,7 @@ object AnchorDesigner: TAnchorDesigner
   end
   object LeftGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.OnChange = nil
     Caption = 'LeftGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -309,6 +335,7 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object LeftRefLeftSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       ShowHint = True
@@ -319,6 +346,7 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefRightSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       ShowHint = True
@@ -329,6 +357,7 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefCenterSpeedButton: TSpeedButton
+      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
       ShowHint = True
@@ -338,27 +367,32 @@ object AnchorDesigner: TAnchorDesigner
       Top = 81
       Width = 30
     end
+    object LeftSiblingLabel: TLabel
+      AutoSize = True
+      BorderSpacing.OnChange = nil
+      Caption = 'Sibling'
+      ParentColor = True
+      Left = 2
+      Height = 12
+      Top = 28
+      Width = 38
+    end
     object LeftAnchoredCheckBox: TCheckBox
+      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
+      OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
+      UseOnChange = True
       Left = 2
       Height = 24
       Width = 70
     end
-    object LeftSiblingLabel: TLabel
-      AutoSize = True
-      Caption = 'Sibling'
-      Left = 2
-      Height = 16
-      Top = 28
-      Width = 38
-    end
     object LeftSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.OnChange = nil
       MaxLength = 0
       ParentShowHint = False
       ShowHint = True
-      TabOrder = 2
       Text = 'LeftSiblingComboBox'
       Left = 5
       Height = 25
