implementing anchor editor, setting sibling and reference sides
 SVN 6649@trunk

--- a/designer/anchoreditor.lfm
+++ b/designer/anchoreditor.lfm
@@ -15,7 +15,6 @@ object AnchorDesigner: TAnchorDesigner
   Width = 520
   object BorderSpaceGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'BorderSpaceGroupBox'
     ClientHeight = 87
     ClientWidth = 168
@@ -26,9 +25,9 @@ object AnchorDesigner: TAnchorDesigner
     Top = 80
     Width = 172
     object LeftBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
+      OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
       TabStop = True
@@ -38,9 +37,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object RightBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
+      OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
       TabStop = True
@@ -51,9 +50,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object TopBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
+      OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
       TabStop = True
@@ -63,9 +62,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object BottomBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
+      OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
       TabStop = True
@@ -76,9 +75,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 50
     end
     object AroundBorderSpaceSpinEdit: TSpinEdit
-      BorderSpacing.OnChange = nil
       Decimal_Places = 0
       MaxValue = 100
+      OnChange = BorderSpaceSpinEditChange
       ParentShowHint = False
       ShowHint = True
       TabStop = True
@@ -91,7 +90,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object TopGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.OnChange = nil
     Caption = 'TopGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -102,9 +100,9 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object TopRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 296
@@ -113,9 +111,9 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 331
@@ -124,9 +122,9 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 1
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 366
@@ -135,7 +133,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopSiblingLabel: TLabel
       AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 94
@@ -144,7 +141,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object TopAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -155,8 +151,8 @@ object AnchorDesigner: TAnchorDesigner
     end
     object TopSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
+      OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
       TabOrder = 1
@@ -168,7 +164,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object BottomGroupBox: TGroupBox
     Anchors = [akLeft, akRight, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'BottomGroupBox'
     ClientHeight = 33
     ClientWidth = 404
@@ -180,9 +175,9 @@ object AnchorDesigner: TAnchorDesigner
     Width = 408
     object BottomRefTopSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 296
@@ -191,9 +186,9 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefBottomSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 331
@@ -202,9 +197,9 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomRefCenterSpeedButton: TSpeedButton
       Anchors = [akTop, akRight]
-      BorderSpacing.OnChange = nil
       GroupIndex = 3
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 366
@@ -213,7 +208,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomSiblingLabel: TLabel
       AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 94
@@ -222,7 +216,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object BottomAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -233,8 +226,8 @@ object AnchorDesigner: TAnchorDesigner
     end
     object BottomSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
+      OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
       TabOrder = 1
@@ -246,7 +239,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object RightGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'RightGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -257,9 +249,9 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object RightRefLeftSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 5
@@ -268,9 +260,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefRightSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 40
@@ -279,9 +271,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object RightRefCenterSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 4
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 75
@@ -291,7 +283,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object RightSiblingLabel: TLabel
       AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 2
@@ -300,7 +291,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object RightAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -311,8 +301,8 @@ object AnchorDesigner: TAnchorDesigner
     end
     object RightSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
+      OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
       Text = 'RightSiblingComboBox'
@@ -324,7 +314,6 @@ object AnchorDesigner: TAnchorDesigner
   end
   object LeftGroupBox: TGroupBox
     Anchors = [akTop, akLeft, akBottom]
-    BorderSpacing.OnChange = nil
     Caption = 'LeftGroupBox'
     ClientHeight = 112
     ClientWidth = 146
@@ -335,9 +324,9 @@ object AnchorDesigner: TAnchorDesigner
     Top = 64
     Width = 150
     object LeftRefLeftSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 5
@@ -346,9 +335,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefRightSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 40
@@ -357,9 +346,9 @@ object AnchorDesigner: TAnchorDesigner
       Width = 30
     end
     object LeftRefCenterSpeedButton: TSpeedButton
-      BorderSpacing.OnChange = nil
       GroupIndex = 2
       NumGlyphs = 0
+      OnClick = ReferenceSideButtonClicked
       ShowHint = True
       ParentShowHint = False
       Left = 75
@@ -369,7 +358,6 @@ object AnchorDesigner: TAnchorDesigner
     end
     object LeftSiblingLabel: TLabel
       AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Sibling'
       ParentColor = True
       Left = 2
@@ -378,7 +366,6 @@ object AnchorDesigner: TAnchorDesigner
       Width = 38
     end
     object LeftAnchoredCheckBox: TCheckBox
-      BorderSpacing.OnChange = nil
       Caption = 'Enabled'
       OnChange = AnchorEnabledCheckBoxChange
       TabOrder = 0
@@ -389,8 +376,8 @@ object AnchorDesigner: TAnchorDesigner
     end
     object LeftSiblingComboBox: TComboBox
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.OnChange = nil
       MaxLength = 0
+      OnChange = SiblingComboBoxChange
       ParentShowHint = False
       ShowHint = True
       Text = 'LeftSiblingComboBox'
